31 de agosto 5:30pm

--- a/ref.bib
+++ b/ref.bib
@@ -36,8 +36,6 @@
   booktitle={2019 XVIII Workshop on Information Processing and Control (RPIC)}, 
   title={Lite NB-IoT Simulator for Uplink Layer}, 
   year={2019},
-  volume={},
-  number={},
   pages={286-291},
   doi={10.1109/RPIC.2019.8882144}
 }
@@ -127,8 +125,6 @@
   booktitle={2017 Third International Conference on Advances in Electrical, Electronics, Information, Communication and Bio-Informatics (AEEICB)}, 
   title={IoT based smart museum using Bluetooth Low Energy}, 
   year={2017},
-  volume={},
-  number={},
   pages={520-523},
   doi={10.1109/AEEICB.2017.7972368}
 }
@@ -139,8 +135,6 @@
   booktitle={2019 31st International Conference on Microelectronics (ICM)}, 
   title={Ultra-Low Power Layered IoT Platform for Museum Content Conservation}, 
   year={2019},
-  volume={},
-  number={},
   pages={86-89},
   doi={10.1109/ICM48031.2019.9021866}
 }
@@ -152,8 +146,6 @@
   title={Study on the Anti-Theft Technology of Museum Cultural Relics Based on Internet of Things}, 
   year={2019},
   volume={7},
-  number={},
-  pages={111387-111395},
   doi={10.1109/ACCESS.2019.2933236}
 }
 
@@ -163,8 +155,6 @@
   booktitle={2016 12th International Conference on Signal-Image Technology   Internet-Based Systems (SITIS)}, 
   title={The Internet of Cultural Things: Towards a Smart Cultural Heritage}, 
   year={2016},
-  volume={},
-  number={},
   pages={493-496},
   doi={10.1109/SITIS.2016.83}
 }
@@ -175,8 +165,6 @@
   booktitle={2015 3rd International Conference on Future Internet of Things and Cloud}, 
   title={Mobile Edutainment System -- National Palace Museum as an Example}, 
   year={2015},
-  volume={},
-  number={},
   pages={597-601},
   doi={10.1109/FiCloud.2015.91}
 }
@@ -367,7 +355,7 @@ Internet of things CISCO
 }
 
 @article{tcp/ip,
-  author          = {FERNÁNDEZ BARCELL, Manuel},
+  author          = {Fernández Barcell, Manuel},
   title           = {Protocolo TCP/IP},
   year            = {2014}
 }
@@ -380,3 +368,177 @@ Internet of things CISCO
   title           = {MQTT protocol: fundamentals, tools and future directions},
   year            = {2019}
 }
+
+@article{montoya2017propuesta,
+  title={Propuesta de una arquitectura para agricultura de precisi{\'o}n soportada en IoT},
+  author={Montoya, Edwin Andr{\'e}s Quiroga and Colorado, Sergio Fernando Jaramillo and Mu{\~n}oz, Wilmar Yesid Campo and Golondrino, Gabriel El{\'\i}as Chanch{\'\i}},
+  journal={Revista Ib{\'e}rica de Sistemas e Tecnologias de Informa{\c{c}}{\~a}o},
+  number={24},
+  pages={39--56},
+  year={2017},
+  publisher={Associa{\c{c}}{\~a}o Ib{\'e}rica de Sistemas e Tecnologias de Informacao}
+}
+
+@article{vazquez1999avetianella,
+  title={Avetianella longoi Siscaro, par{\'a}sito de huevos de Phoracantha semipunctata F.: Primera cita de su presencia en Espa{\~n}a y bases para la puesta en pr{\'a}ctica del control biol{\'o}gico del xil{\'o}fago},
+  author={V{\'A}ZQUEZ, P MANSILLA and OTERO, R P{\'E}REZ and FERN{\'A}NDEZ, F RUIZ and CORRAL, C SALINERO},
+  journal={Bolet{\'\i}n de sanidad vegetal. Plagas},
+  volume={25},
+  number={4},
+  pages={515--522},
+  year={1999},
+  publisher={Centro de Publicaciones Agrarias, Pesqueras y Alimentarias}
+}
+
+@article{ripa2004termitas,
+  title={Termitas y otros insectos xil{\'o}fagos en Chile: especies, biolog{\'\i}a y manejo.},
+  author={Ripa, Renato and Luppichini, Paola and Krecek, Jan and Lenz, Michael and Creffield, Jim W and others},
+  year={2004},
+  publisher={Instituto de Investigaciones Agropecuarias (Chile). La Cruz}
+}
+
+@manual{esp12,
+  author       = {Ai-Thinker},
+  title        = {ESP-12F Datasheet, Versión 1, 2018}
+}
+
+@article{ref3,
+  author          = {Gubbi J., Buyya R., Marusic S. & Palaniswami M.},
+  journal         = {Future Gener. Comput. Syst.},
+  number          = {7},
+  title           = {Internet of Things (IoT): A vision, architectural elements, and future directions},
+  volume          = {29},
+  year            = {2013},
+  pages           = {1645--1660},
+  doi             = {10.1016/j.future.2013.01.010}
+}
+
+@article{ref9,
+  author          = {Guizani M., Mohammadi M., Aledhari M. & Ayyash M.},
+  journal         = {IEEE Commun. Surv. Tutor},
+  number          = {4},
+  title           = {Internet of Things: A Survey on Enabling Technologies, Protocols, and Applications},
+  volume          = {17},
+  year            = {2015},
+  pages           = {2347--2376},
+  doi             = {10.1109/COMST.2015.2444095.}
+}
+
+@article{ref10,
+  author          = {Burhan M., Rehman R., Khan B. & Kim B.-S.},
+  journal         = {Sensors},
+  number          = {9},
+  title           = {IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey},
+  volume          = {18},
+  year            = {2018},
+  pages           = {2796},
+  doi             = {10.3390/s18092796.}
+}
+
+@article{ref8,
+  author          = {Botta A., De Donato W., Persico V. & Pescapé A.},
+  journal         = {Future Gener. Comput. Syst.},
+  title           = {Integration of Cloud computing and Internet of Things: A survey},
+  volume          = {56},
+  year            = {2016},
+  pages           = {684--700},
+  doi             = {10.1016/j.future.2015.09.021.}
+}
+
+@article{ref4,
+  author          = {Atzori L., Iera A. & Morabito G.},
+  journal         = {Comput. Netw.},
+  number          = {15},
+  title           = {The Internet of Things: A survey},
+  volume          = {54},
+  year            = {2010},
+  pages           = {2787--2805},
+  doi             = {10.1016/j.comnet.2010.05.010.}
+}
+
+@article{ref12,
+  author          = {Hassija V., Chamola V., Saxena V. & Other},
+  journal         = {IEEE Access},
+  title           = {A Survey on IoT Security: Application Areas, Security Threats, and Solution Architectures},
+  volume          = {7},
+  year            = {2019},
+  doi             = {10.1109/ACCESS.2019.2924045}
+}
+
+@article{ref13,
+  author          = {Omoniwa B., Javed M. A., Bouk S. H. & Others},
+  journal         = {IEEE Internet Things J.},
+  number          = {3},
+  title           = {Fog/Edge Computing-Based IoT (FECIoT): Architecture, Applications, and Research Issues},
+  volume          = {6},
+  year            = {2019},
+  pages           = {4118--4149},
+  doi             = {10.1109/JIOT.2018.2875544.}
+}
+
+@article{ref15,
+  author          = {Kassab W. & Darabkh K. A.},
+  journal         = {J. Netw. Comput. Appl.},
+  title           = {A-Z survey of Internet of Things: Architectures, protocols, applications, recent advances, future directions and recommendations},
+  volume          = {163},
+  year            = {2020},
+  doi             = {10.1016/j.jnca.2020.102663}
+}
+
+@article{ref16,
+  author          = {Yadegaridehkordi E., Attarbashi Z. S., Hassan R. & Others},
+  journal         = {IEEE Access},
+  title           = {A Survey on Trend and Classification of Internet of Things Reviews},
+  volume          = {8},
+  year            = {2020},
+  doi             = {10.1109/ACCESS.2020.3002932}
+}
+
+@article{ref19,
+  author          = {Muccini H. & Moghaddam M. T.},
+  journal         = {in Software Architecture},
+  number          = {Cuesta C. E., Garlan D., and Pérez J., Cham Eds.: Springer International Publishing},
+  title           = {IoT Architectural Styles: A Systematic Mapping Study},
+  volume          = {11048},
+  year            = {2018},
+  pages           = {68-85}
+}
+
+@article{ref25,
+  author          = {Berru J., Mazon Olivo B., Pan A. & Others},
+  journal         = {Appl. Technol. ICAT 2019 Commun. Comput. Inf. Sci.},
+  title           = {SCADA System Based on IoT for Intelligent Control of Banana Crop Irrigation},
+  volume          = {1193},
+  year            = {2020},
+  pages           = {243--256},
+}
+
+@article{ref26,
+  author          = {Sharma V., Lim J. D., Kim J. N. & You I.},
+  journal         = {Mob. Inf. Syst.},
+  title           = {SACA: Self-Aware Communication Architecture for IoT Using Mobile Fog Servers},
+  volume          = {2017},
+  year            = {2017},
+  pages           = {1--17},
+  doi             = {10.1155/2017/3273917}
+}
+
+@article{agriculturaPrecision,
+  author          = {Quiroga E., Jaramillo S., Campo M. & Chanchí G.},
+  journal         = {Revista RISTI},
+  number          = {24},
+  title           = {Propuesta de una Arquitectura para Agricultura de Precisión Soportada en IoT},
+  year            = {2017},
+  pages           = {39-56}
+}
+
+@article{ioT_en_Cosas_de_salud,
+  author          = {Cera J., Martínez L., Rojas J. & others},
+  journal         = {Revista I+D en TIC},
+  number          = {1},
+  title           = {Apoyo al estado del arte del internet de las cosas en salud},
+  volume          = {6},
+  year            = {2015},
+  pages           = {14-25}
+}
+
